# hackaton-cirt

./: .gitignore  ARO_Architecture_et_Conventions.md  README.md  deploy.sh  docker-compose.yml
api/: .coverage  .env.example  Dockerfile  alembic.ini  aro_persist.db  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 0001_initial_alerts.py  0002_incidents_ml_reports.py  0003_cve_reports.py
api/src/aro/: main.py
api/src/aro/application/alerting/: dto.py  use_cases.py
api/src/aro/application/detection/: dto.py  use_cases.py
api/src/aro/application/incident/: use_cases.py
api/src/aro/application/integration/: use_cases.py
api/src/aro/application/ml/: use_cases.py
api/tests/: conftest.py
api/tests/integration/: test_api_alerts.py  test_detections_api.py  test_incidents_api.py  test_ml_api.py  test_persistence_repos.py  test_protection_api.py  test_session_repo.py  test_sqlalchemy_repo.py  test_virus_api.py  test_vulnerabilities_api.py
api/tests/unit/application/: test_incident_use_cases.py  test_ml_use_cases.py  test_protection_use_cases.py  test_record_scan.py  test_use_cases.py  test_virus_use_cases.py
api/tests/unit/domain/: test_alert_entity.py  test_incident.py  test_protection.py  test_scan_detection.py  test_value_objects.py  test_virus.py  test_vulnerability.py
api/tests/unit/infrastructure/: test_anomaly_pipeline.py  test_blockers.py  test_broker.py  test_debsecan_collector.py  test_groq_explainer.py
api/tests/unit/integration/: test_integration_use_cases.py
api/tests/unit/interfaces/: test_middleware.py  test_stream.py
(+110 files in other folders)
