[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aro"
version = "0.1.0"
description = "Plateforme de supervision de sécurité pilotée par IA"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "vt-py>=0.22.0",
    "opensearch-py>=3.2.0",
    "groq>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=aro --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
]
